[fix] index issues

--- a/scripts/jaxon_tokenization_lemmatization.ipynb
+++ b/scripts/jaxon_tokenization_lemmatization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,22 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = pd.read_csv('../data/data_clean.csv')\n",
+    "df_model = pd.read_csv('../data/data_1_after_html_extraction.csv')\n",
     "\n",
     "df_model['cleaned_text'] = df_model['contents'].apply(clean_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model.to_csv('../data/data_2_after_tokenization_lemmatization.csv', index=True)"
+    "df_model.to_csv('../data/data_2_after_tokenization_lemmatization.csv', index=False)"
    ]
   }
  ],
