--- a/scripts/jaxon_web_scraping.ipynb
+++ b/scripts/jaxon_web_scraping.ipynb
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model.to_csv('../data/data_clean.csv', index=True)"
+    "df_model.to_csv('../data/data_1_after_html_extraction.csv', index=False)"
    ]
   }
  ],
