--- a/writeups/tasks-summary.qmd
+++ b/writeups/tasks-summary.qmd
@@ -6,17 +6,7 @@ date: today
 
 ### HTML scraping
 
-![Only including Paragraph Content](images/Rplot.png){fig-align="center" width="346"}
-
-![Both Paragraph Content and Header Information](images/Rplot01after.png){fig-align="center" width="352"}
-
-There is a positive overall effect on including the header content.
-
-The binary accuracy increased from 0.93 to 0.95, indicating a small improvement in model performance on the training data. validation binary accuracy didn't really change much, stay around 0.8. The loss overall decreased throughout the five epoch, at the end, it decrease from 0.33 to 0.26, indicating better model fitting. Val_loss also increased from 0.87 to 1.06
-
-There is a positive overall effect on including the header content. It leds to faster convergence, lower loss, and higher accuracy .
-
-Does including header content improve predictions? Answer the question and provide quantitative evidence supporting your answer.
+Including header content in the model resulted in a small improvement in performance, primarily on the training data. The binary accuracy increased from 0.92 to 0.95, indicating a small improvement in the model's ability to classify the training data correctly, demonstrating better model fitting. The loss decreased throughout the five epochs, ending at 0.27 compared to 0.31, further indicating improved model fitting. On the other hand, the changes were less pronounced in the validation set. The validation binary accuracy increased slightly but stayed around 0.8, suggesting no significant improvement in the model's generalization to unseen data. However, the validation loss decreased slightly from 0.83 to 0.79, indicating a minor improvement in performance on the validation set. Overall, including header content seems to enhance the model’s performance on the training data, but its impact on predictive accuracy for unseen data is minimal.
 
 ### Bigrams
 
