--- a/scripts/jaxon_script.ipynb
+++ b/scripts/jaxon_script.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = pd.read_csv('../data/data_2_after_tokenization_lemmatization.csv')"
+    "# df_model = pd.read_csv('../data/data_2_after_tokenization_lemmatization.csv')"
    ]
   },
   {
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "df_model.head(5)"
+    "# df_model.head(5)"
    ]
   },
   {
@@ -304,9 +304,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_doc_vector(text):\n",
-    "  doc = nlp(text)\n",
-    "  return doc.vector"
+    "# def get_doc_vector(text):\n",
+    "#   doc = nlp(text)\n",
+    "#   return doc.vector"
    ]
   },
   {
@@ -320,31 +320,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'cleaned_text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/anaconda3/envs/pstat/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'cleaned_text'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_model[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdoc_vector\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf_model\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcleaned_text\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mapply(get_doc_vector)\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/pstat/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/pstat/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'cleaned_text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_model['doc_vector'] = df_model['cleaned_text'].apply(get_doc_vector)"
+    "# df_model['doc_vector'] = df_model['cleaned_text'].apply(get_doc_vector)"
    ]
   },
   {
@@ -358,34 +336,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'cleaned_text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/anaconda3/envs/pstat/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'cleaned_text'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m tfidf \u001b[38;5;241m=\u001b[39m TfidfVectorizer(max_features\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5000\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m tfidf_matrix \u001b[38;5;241m=\u001b[39m tfidf\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mdf_model\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcleaned_text\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      3\u001b[0m df_tfidf \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(tfidf_matrix\u001b[38;5;241m.\u001b[39mtoarray(),\n\u001b[1;32m      4\u001b[0m                         columns\u001b[38;5;241m=\u001b[39mtfidf\u001b[38;5;241m.\u001b[39mget_feature_names_out())\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/pstat/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/pstat/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'cleaned_text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tfidf = TfidfVectorizer(max_features=5000)\n",
-    "tfidf_matrix = tfidf.fit_transform(df_model['cleaned_text'])\n",
-    "df_tfidf = pd.DataFrame(tfidf_matrix.toarray(),\n",
-    "                        columns=tfidf.get_feature_names_out())"
+    "# tfidf = TfidfVectorizer(max_features=5000)\n",
+    "# tfidf_matrix = tfidf.fit_transform(df_model['cleaned_text'])\n",
+    "# df_tfidf = pd.DataFrame(tfidf_matrix.toarray(),\n",
+    "#                         columns=tfidf.get_feature_names_out())"
    ]
   },
   {
@@ -394,12 +350,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_doc_vectors = pd.DataFrame(df_model['doc_vector'].tolist())\n",
+    "# df_doc_vectors = pd.DataFrame(df_model['doc_vector'].tolist())\n",
     "\n",
-    "df_tfidf.reset_index(drop=True, inplace=True)\n",
-    "df_doc_vectors.reset_index(drop=True, inplace=True)\n",
+    "# df_tfidf.reset_index(drop=True, inplace=True)\n",
+    "# df_doc_vectors.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "df_combined_vectors = pd.concat([df_tfidf, df_doc_vectors], axis=1)"
+    "# df_combined_vectors = pd.concat([df_tfidf, df_doc_vectors], axis=1)"
    ]
   },
   {
@@ -415,34 +371,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_features(text):\n",
-    "  doc = nlp(text)\n",
+    "# def extract_features(text):\n",
+    "#   doc = nlp(text)\n",
     "\n",
-    "  num_tokens = len(doc)\n",
-    "  num_nouns = sum(1 for token in doc if token.pos_ == 'NOUN')\n",
-    "  num_verbs = sum(1 for token in doc if token.pos_ == 'VERB')\n",
-    "  num_adjs = sum(1 for token in doc if token.pos_ == 'ADJ')\n",
-    "  num_entities = len(doc.ents)\n",
-    "  num_person = sum(1 for ent in doc.ents if ent.label_ == 'PERSON')\n",
-    "  num_org = sum(1 for ent in doc.ents if ent.label_ == 'ORG')\n",
-    "  num_gpe = sum(1 for ent in doc.ents if ent.label_ == 'GPE')\n",
-    "  num_sentences = len(list(doc.sents))\n",
-    "  avg_sentence_length = np.mean([len(sent) for sent in doc.sents]) if num_sentences > 0 else 0\n",
-    "  num_urls = len(re.findall(r'http\\S+|www\\S+', text))\n",
+    "#   num_tokens = len(doc)\n",
+    "#   num_nouns = sum(1 for token in doc if token.pos_ == 'NOUN')\n",
+    "#   num_verbs = sum(1 for token in doc if token.pos_ == 'VERB')\n",
+    "#   num_adjs = sum(1 for token in doc if token.pos_ == 'ADJ')\n",
+    "#   num_entities = len(doc.ents)\n",
+    "#   num_person = sum(1 for ent in doc.ents if ent.label_ == 'PERSON')\n",
+    "#   num_org = sum(1 for ent in doc.ents if ent.label_ == 'ORG')\n",
+    "#   num_gpe = sum(1 for ent in doc.ents if ent.label_ == 'GPE')\n",
+    "#   num_sentences = len(list(doc.sents))\n",
+    "#   avg_sentence_length = np.mean([len(sent) for sent in doc.sents]) if num_sentences > 0 else 0\n",
+    "#   num_urls = len(re.findall(r'http\\S+|www\\S+', text))\n",
     "\n",
-    "  return {\n",
-    "        \"num_tokens\": num_tokens,\n",
-    "        \"num_nouns\": num_nouns,\n",
-    "        \"num_verbs\": num_verbs,\n",
-    "        \"num_adjs\": num_adjs,\n",
-    "        \"num_entities\": num_entities,\n",
-    "        \"num_person\": num_person,\n",
-    "        \"num_org\": num_org,\n",
-    "        \"num_gpe\": num_gpe,\n",
-    "        \"num_sentences\": num_sentences,\n",
-    "        \"avg_sentence_length\": avg_sentence_length,\n",
-    "        \"num_urls\": num_urls\n",
-    "    }\n",
+    "#   return {\n",
+    "#         \"num_tokens\": num_tokens,\n",
+    "#         \"num_nouns\": num_nouns,\n",
+    "#         \"num_verbs\": num_verbs,\n",
+    "#         \"num_adjs\": num_adjs,\n",
+    "#         \"num_entities\": num_entities,\n",
+    "#         \"num_person\": num_person,\n",
+    "#         \"num_org\": num_org,\n",
+    "#         \"num_gpe\": num_gpe,\n",
+    "#         \"num_sentences\": num_sentences,\n",
+    "#         \"avg_sentence_length\": avg_sentence_length,\n",
+    "#         \"num_urls\": num_urls\n",
+    "#     }\n",
     "\n"
    ]
   },
@@ -450,22 +406,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_linguistic_features \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mdf_model\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcleaned_text\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(extract_features)\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[1;32m      2\u001b[0m df_linguistic_features\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_linguistic_features = pd.DataFrame(df_model['cleaned_text'].apply(extract_features).tolist())\n",
-    "df_linguistic_features.head(5)"
+    "# df_linguistic_features = pd.DataFrame(df_model['cleaned_text'].apply(extract_features).tolist())\n",
+    "# df_linguistic_features.head(5)"
    ]
   },
   {
