--- a/scripts/jaxon_web_scraping.ipynb
+++ b/scripts/jaxon_web_scraping.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,9 @@
     "    contents.append(paragraph.get_text(strip=True))\n",
     "  contents = ' '.join(contents)\n",
     "  return contents\n",
-    "  "
+    "  \n",
+    "df_clean = pd.read_csv('../data/claims_clean.csv')\n",
+    "df_raw = pd.read_csv('../data/claims_raw.csv')"
    ]
   },
   {
@@ -42,9 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = pd.read_csv('../data/claims_clean.csv')\n",
-    "df_raw = pd.read_csv('../data/claims_raw.csv')\n",
-    "\n",
     "df_raw['soup'] = df_raw['text_tmp'].apply(lambda x: BeautifulSoup(x, 'html.parser'))\n",
     "df_raw['headers'] = df_raw['soup'].apply(extract_headers)\n",
     "df_raw['paragraphs'] = df_raw['soup'].apply(extract_paragraphs)\n",
