[check] orgnize files

--- a/scripts/jaxon_scripts/jaxon_feature_extraction.ipynb
+++ b/scripts/jaxon_scripts/jaxon_feature_extraction.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = pd.read_csv('../data/data_2_after_tokenization_lemmatization.csv')\n",
+    "df_model = pd.read_csv('../../data/data_2_after_tokenization_lemmatization.csv')\n",
     "\n",
     "y_bclass = df_model['bclass']\n",
     "y_mclass = df_model['mclass']\n",
@@ -1395,7 +1395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_final.to_csv('../data/X_features_final.csv', index=False)"
+    "X_final.to_csv('../../data/X_features_final.csv', index=False)"
    ]
   },
   {
