--- a/scripts/jaxon_scripts/jaxon_model_fitting.ipynb
+++ b/scripts/jaxon_scripts/jaxon_model_fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,16 @@
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.preprocessing import label_binarize\n",
     "\n",
-    "df_model = pd.read_csv('../data/data_2_after_tokenization_lemmatization.csv')"
+    "df_model = pd.read_csv('../../data/data_2_after_tokenization_lemmatization.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.read_csv('../data/X_features_final.csv')\n",
+    "X = pd.read_csv('../../data/X_features_final.csv')\n",
     "y_bclass = df_model['bclass']\n",
     "\n",
     "\n",
