--- a/scripts/jaxon_scripts/jaxon_tokenization_lemmatization.ipynb
+++ b/scripts/jaxon_scripts/jaxon_tokenization_lemmatization.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = pd.read_csv('../data/data_1_after_html_extraction.csv')\n",
+    "df_model = pd.read_csv('../../data/data_1_after_html_extraction.csv')\n",
     "\n",
     "df_model['cleaned_text'] = df_model['contents'].apply(clean_text)"
    ]
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model.to_csv('../data/data_2_after_tokenization_lemmatization.csv', index=False)"
+    "df_model.to_csv('../../data/data_2_after_tokenization_lemmatization.csv', index=False)"
    ]
   }
  ],
