--- a/scripts/jaxon_scripts/jaxon_vectorization_bigrams.ipynb
+++ b/scripts/jaxon_scripts/jaxon_vectorization_bigrams.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = pd.read_csv('../data/data_2_after_tokenization_lemmatization.csv')\n",
+    "df_model = pd.read_csv('../../data/data_2_after_tokenization_lemmatization.csv')\n",
     "\n",
     "# construct Tf Idf model with maximum 5000 features, capture only bigrams\n",
     "bigram_vectorizer = TfidfVectorizer(ngram_range=(2, 2), max_features=10000)\n",
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bigram.to_csv('../data/X_features_bigrams.csv', index=False)"
+    "df_bigram.to_csv('../../data/X_features_bigrams.csv', index=False)"
    ]
   },
   {
