--- a/scripts/jaxon_scripts/jaxon_vectorization_unigrams.ipynb
+++ b/scripts/jaxon_scripts/jaxon_vectorization_unigrams.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = pd.read_csv('../data/data_2_after_tokenization_lemmatization.csv')\n",
+    "df_model = pd.read_csv('../../data/data_2_after_tokenization_lemmatization.csv')\n",
     "\n",
     "df_model['doc_vector'] = df_model['cleaned_text'].apply(get_doc_vector) # use spacy to vectorize contents\n",
     "\n",
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined_vectors.to_csv('../data/X_features_unigrams.csv', index=False)"
+    "df_combined_vectors.to_csv('../../data/X_features_unigrams.csv', index=False)"
    ]
   },
   {
