--- a/scripts/jaxon_scripts/jaxon_web_scraping.ipynb
+++ b/scripts/jaxon_scripts/jaxon_web_scraping.ipynb
@@ -34,8 +34,8 @@
     "  contents = ' '.join(contents)\n",
     "  return contents\n",
     "  \n",
-    "df_clean = pd.read_csv('../data/claims_clean.csv')\n",
-    "df_raw = pd.read_csv('../data/claims_raw.csv')"
+    "df_clean = pd.read_csv('../../data/claims_clean.csv')\n",
+    "df_raw = pd.read_csv('../../data/claims_raw.csv')"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model.to_csv('../data/data_1_after_html_extraction.csv', index=False)"
+    "df_model.to_csv('../../data/data_1_after_html_extraction.csv', index=False)"
    ]
   }
  ],
